# customdict

./: .gitignore  Dockerfile  README.md  manage.py  my.cnf  mysql.yaml  pyproject.toml  requirements.txt
customdict/: asgi.py  settings.py  urls.py  wsgi.py
dictionary/: admin.py  forms.py  lang_list.json  locale_list.json  models.py  urls.py  views.py
dictionary/migrations/: 0001_initial.py  0002_remove_language_locale.py  0003_remove_language_language_code_and_more.py  0004_alter_originlanguage_language_code_and_more.py  0005_usermetadata_dictionary_dictionary_name_and_more.py  0006_rename__password_user_password_and_more.py  0007_alter_dictionary_user_alter_language_user_and_more.py
dictionary/static/: style.css
dictionary/templates/: dictionaries.html  dictionary.html  new_dictionary.html  new_translation.html
