[tool.poetry]
name = "customdict"
version = "0.1.0"
description = "Customizable dictionary project."
authors = ["alirezag103"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
